styles.css
* {
  margin: 0;
  padding: 0;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

:root {
  --cyan: #26c2ae;
  --very-dark-cyan: #00494d;
  --dark-grayish-cyan: #5e7a7d;
  --dark-grayish-cyan-1: #7f9c9f;
  --light-grayish-cyan: #c5e4e7;
  --light-grayish-cyan-1: #f4fafa;
  --reset-background-hover: #9fe8df;
  --white: #ffffff;
}

html {
  box-sizing: border-box;
  font-size: 62.5%;
}

body {
  font-family: "Space Mono", monospace;
  background-color: var(--light-grayish-cyan);
}

header {
  margin-top: 5rem;
  margin-bottom: 4rem;
}

.heading {
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 1rem;
  font-size: 3.2rem;
  color: var(--very-dark-cyan);
}

.main {
  background-color: var(--white);
  box-shadow: 0px 32px 43px rgba(79, 166, 175, 0.200735);
  border-radius: 2.5rem 2.5rem 0rem 0rem;
  padding: 3.2rem;
}

.bill {
  margin-bottom: 3.2rem;
  /* border: 2px dotted gold; */
}

.title {
  font-size: 1.6rem;
  line-height: 2.4rem;
  color: var(--dark-grayish-cyan);
  margin-bottom: 0.6rem;
}

.inputs {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem 1.9rem;
  background-color: var(--light-grayish-cyan-1);
  border-radius: 0.5rem;
}

.input {
  font-family: inherit;
  text-align: right;
  font-weight: bold;
  font-size: 2.4rem;
  line-height: 3.6rem;
  color: var(--very-dark-cyan);
  width: 90%;
  border: none;
  outline: transparent;
  background-color: var(--light-grayish-cyan-1);
}

/* Hide number input arrows */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

::placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: var(--dark-grayish-cyan-1);
}

:-ms-input-placeholder {
  /* Internet Explorer 10-11 */
  color: var(--dark-grayish-cyan-1);
}

::-ms-input-placeholder {
  /* Microsoft Edge */
  color: var(--dark-grayish-cyan-1);
}

.selection {
  width: 100%;
}

.select-tip {
  margin-bottom: 1.6rem;
}

.percent {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 1.6rem;
  margin-bottom: 3.2rem;
}

.btn {
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  border: none;
  outline: transparent;
  border-radius: 0.5rem;
  transition: all 0.2s ease-out;
}

.btn:hover {
  background-color: var(--cyan);
  color: var(--very-dark-cyan);
}

.percent-btn {
  font-size: 2.4rem;
  line-height: 3.6rem;
  background-color: var(--very-dark-cyan);
  color: var(--white);
  padding: 0.6rem 1.6rem;
}

.custom {
  font-family: inherit;
  text-align: right;
  font-weight: bold;
  font-size: 2.4rem;
  line-height: 3.6rem;
  color: var(--very-dark-cyan);
  border: none;
  outline: transparent;
  background-color: var(--light-grayish-cyan-1);
  width: 100%;
  padding-right: 1.7rem;
}

.number {
  margin-bottom: 3.2rem;
}

.tip {
  background-color: var(--very-dark-cyan);
  border-radius: 1.5rem;
  padding: 2.4rem;
}

.tip-amount,
.total {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.person-tip {
  font-size: 1.6rem;
  line-height: 2.4rem;
  color: var(--white);
}

.person {
  font-weight: bold;
  font-size: 1.3rem;
  line-height: 1.9rem;
  color: var(--dark-grayish-cyan-1);
}

.tip-amount {
  margin-bottom: 2rem;
}

.amount,
.amount-total {
  font-weight: bold;
  font-size: 3.2rem;
  line-height: 4.7rem;
  letter-spacing: -0.067rem;
  color: var(--cyan);
}

.total {
  margin-bottom: 3.2rem;
}

.reset {
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  font-size: 2rem;
  line-height: 3rem;
  color: var(--very-dark-cyan);
  background-color: var(--cyan);
  width: 100%;
  text-transform: uppercase;
  padding: 0.9rem 3.3rem;
  transition: all 0.2s ease-out;
}

.reset:hover {
  background-color: var(--reset-background-hover);
}

.reset:active {
  transform: translateY(0.5rem);
}

/* Media Queries */
@media only screen and (min-width: 768px) {
  .main {
    border-radius: 2.5rem;
    max-width: 589px;
    margin: 0 auto;
  }
}

@media only screen and (min-width: 920px) {
  .heading {
    margin-top: 16.3rem;
    margin-bottom: 8.7rem;
  }

  .main {
    display: flex;
    justify-content: space-between;
    border-radius: 2.5rem;
    max-width: 920px;
    margin: 0 auto;
  }

  .bill-container {
    width: 37.9rem;
  }

  .percent {
    grid-template-columns: repeat(3, 1fr);
  }

  .custom {
    padding-right: initial;
    text-align: center;
  }

  .tip {
    padding: 4rem;
    width: 41.3rem;
  }

  .tip-amount {
    margin-bottom: 4.1rem;
  }

  .total {
    margin-bottom: 13rem;
  }
}

